[package]
name = "bitfoo"
description = "Bit vector classes for very large vectors"
repository = "https://github.com/davethecanuck/rust-bitfoo"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["David Sutherland <davethecanuck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.19.4"
